cmake_minimum_required(VERSION 3.28)
project(OOP_C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(OOP_C__
        1.cpp
        2.cpp
        2dArrat.cpp
        3.cpp
        Asg4Q1.cpp
        Asg4Q2.cpp
        Asg4Q3.cpp
        Asg4Q4.cpp
        Asg4Q5.cpp
        Asg4Q6.cpp
        ATMservice.c
        BankingApplication.cpp
        BinarySearch.cpp
        BinarySearchMergeSorting.cpp
        BOB.c
        C++.cpp
        Clab10.cpp
        Clab11.cpp
        Clab12.cpp
        Clab13.cpp
        Clab14.cpp
        Clab15.cpp
        Clab16.cpp
        Clab17.cpp
        Clab18.cpp
        Clab19.cpp
        Clab20.cpp
        Clab21.cpp
        Clab22.cpp
        Clab23.cpp
        Clab24.cpp
        Clab25.cpp
        Clab26.cpp
        Clab27.cpp
        Clab28.cpp
        Clab29.cpp
        Clab30.cpp
        Clab31.cpp
        Clab32.cpp
        Clab33.cpp
        Clab34.cpp
        Clab35.cpp
        Clab36.cpp
        Clab37.cpp
        Clab38.cpp
        Clab39.cpp
        Clab4.cpp
        Clab5.cpp
        Clab6.cpp
        Clab7.cpp
        Clab8.cpp
        Clab9.cpp
        classes.cpp
        classObject.cpp
        classses2.cpp
        CppLab.cpp
        Destrucotr.cpp
        exam1.cpp
        Exam2.cpp
        Exam3.cpp
        exam4.cpp
        Examscpp.cpp
        Exceptionhandling.cpp
        FncOverloading.cpp
        Hospital.cpp
        HospitalMngmt.cpp
        inheritance.cpp
        IsArraySorted.cpp
        Lab1.cpp
        Lab2.cpp
        learn-cPP.cpp
        LearnC++.cpp
        LibraryManagemet.cpp
        Linked.cpp
        Linkedlist.cpp
        LL.cpp
        main.cpp
        MemoryMngmt.cpp
        mergesortinggg.cpp
        new2.cpp
        newww.cpp
        P1.cpp
        SnakeGame.cpp
        SoftwareTestingQ1.cpp
        SoftwareTesttingQ2.cpp
        stringCmp.cpp
        strings.cpp
        Template1.cpp
        Template2.cpp
        TowerOfHanoi.cpp
        VirtualFnc.cpp
        VirtualFunctions.cpp
        vp2.cpp)
